<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:context="jason.tuchler.com.popularmovies.MovieDetails">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#4a4a4a" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:padding="@dimen/fab_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/titleContainer"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_layout_height"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:background="@color/colorMovieTitle"
                    android:focusableInTouchMode="true">

                    <TextView
                        android:id="@+id/movieDetailTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/fab_margin"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/title_text_size"
                        android:textStyle="bold" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/moviePoster"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_below="@id/titleContainer"
                    android:orientation="horizontal"
                    android:padding="@dimen/fab_margin"
                    android:weightSum="10">

                    <ImageView
                        android:id="@+id/movieDetailPoster"
                        android:layout_width="@dimen/poster_layout_width"
                        android:layout_height="match_parent"
                        android:layout_weight="3.7"
                        android:contentDescription="@string/Movie_Poster" />

                    <LinearLayout
                        android:layout_width="@dimen/poster_layout_width"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/fab_margin"
                        android:layout_weight="6"
                        android:orientation="vertical"
                        android:padding="@dimen/poster_layout_padding">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Release_Date"
                            android:textSize="@dimen/movie_details_text_size" />

                        <TextView
                            android:id="@+id/releaseDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="20dp"
                            android:textSize="@dimen/movie_details_text_size" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Movie_Rating"
                            android:textSize="@dimen/movie_details_text_size" />

                        <TextView
                            android:id="@+id/movieRating"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/movie_details_text_size" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imgFavorite"
                        android:layout_width="@dimen/star_dimen"
                        android:layout_height="@dimen/star_dimen"
                        android:layout_marginTop="@dimen/star_margin"
                        android:layout_weight="0.3"
                        android:onClick="btnFavoriteTapped"
                        app:srcCompat="@drawable/favorite_uncheck" />
                </LinearLayout>
                <android.support.design.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/coordinatorLayout">

                </android.support.design.widget.CoordinatorLayout>
                <TextView
                    android:id="@+id/movieDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/movie_descript_text_size" />

                <LinearLayout
                    android:id="@+id/listLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Trailers"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="@dimen/trailers_label_text_size"
                        android:textStyle="bold" />

                    <ListView
                        android:id="@+id/listView"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/list_view_layout_height"
                        android:nestedScrollingEnabled="true">
                    </ListView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/listReviewsLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewReviews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Reviews"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="@dimen/reviews_text_size"
                        android:textStyle="bold"/>

                    <ListView
                        android:id="@+id/listViewReviews"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/list_view_reviews_height"
                        android:nestedScrollingEnabled="true">

                    </ListView>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>


